<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dip"
    android:paddingRight="20dip">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/amis"
        android:layout_centerHorizontal="true"
        />
    <ImageView
        android:src="@android:drawable/divider_horizontal_textfield"
        android:id="@+id/separation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_below="@id/titre"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:paddingTop="10dp"
        />
    <TextView
        android:id="@+id/nomAmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nom"
        android:paddingTop="20dip"
        android:layout_below="@id/separation"
        android:layout_alignParentLeft="true"
        />
    <Button
        android:id="@+id/supprimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supprimer"
        android:paddingTop="20dip"
        android:layout_below="@+id/separation"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageView
        android:id="@+id/photo_profil"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/supprimer"
        android:src="@mipmap/profil"/>
    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Genre"
        android:paddingTop="10dip"
        android:layout_below="@+id/photo_profil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/cheveux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheveux"
        android:paddingTop="15dip"
        android:layout_below="@+id/genre"
        android:layout_alignRight="@+id/contact"
        android:layout_alignEnd="@+id/contact" />
    <TextView
        android:id="@+id/localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Localisation"
        android:paddingTop="15dip"
        android:layout_below="@+id/cheveux"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:paddingTop="10dip"
        android:layout_below="@+id/photo_profil"
        android:layout_alignRight="@+id/yeux"
        android:layout_alignEnd="@+id/yeux" />
    <TextView
        android:id="@+id/yeux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yeux"
        android:layout_alignParentRight="true"
        android:layout_below="@id/age"
        android:paddingTop="15dip"
        />

    <Button
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_below="@+id/localisation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <CheckBox
        android:id="@+id/favori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favori"
        android:layout_below="@id/contact"
        android:layout_toRightOf="@id/contact"
        android:layout_alignParentLeft="true"
        android:checked="false"
        />
    <Button
        android:id="@+id/rencontre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rencontre"
        android:layout_above="@+id/favori"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cheveux"
        android:id="@+id/textView7"
        android:layout_above="@+id/localisation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yeux"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/yeux"
        android:layout_toLeftOf="@+id/rencontre"
        android:layout_toStartOf="@+id/rencontre" />
</RelativeLayout>