<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="UCLove Menu"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="italic"
        tools:context=".Menu" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Profil"
        android:text="@string/profil"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/button"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Preference"
        android:text="@string/preferences"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/People"
        android:text="@string/people"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Friends"
        android:text="@string/amis"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Requests"
        android:text="@string/requete"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Chat"
        android:text="@string/chat"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Meet"
        android:text="@string/rencontre"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/button"
        />

</LinearLayout>