<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:text="@string/info"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login" />
        <EditText
            android:layout_gravity="center_horizontal"
            android:id="@+id/login_inscription"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="text"
            android:gravity="left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mdp" />
        <EditText
            android:layout_gravity="center_horizontal"
            android:id="@+id/motdepasse"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:hint="@string/mdp"
            android:inputType="textPassword"
            android:gravity="left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Prenom" />
        <EditText
            android:layout_gravity="center_horizontal"
            android:id="@+id/prénom"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:hint="@string/Prenom"
            android:inputType="text"
            android:gravity="left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Nom" />
        <EditText
            android:layout_gravity="center_horizontal"
            android:id="@+id/nom"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:hint="@string/Nom"
            android:inputType="text"
            android:gravity="left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Date_de_naissance" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:startYear="1926"
            android:endYear="2016"
            android:calendarViewShown="false"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="genre" />

        <Spinner
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Localisation" />
        <EditText
            android:layout_gravity="center_horizontal"
            android:id="@+id/localisation"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:hint="@string/Localisation"
            android:inputType="text"
            android:gravity="left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Etude" />
        <Spinner
            android:layout_gravity="center_horizontal"
            android:id="@+id/etude"
            android:layout_width="264dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/comptecreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/compte"
            android:background="@drawable/button"
            style="@style/ButtonText"/>

    </LinearLayout>
</ScrollView>