<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/pseudonyme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pseudo"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/edit_pseudonyme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pseudoOfFriend"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="@color/red"
        android:layout_gravity="center"/>

</LinearLayout>