<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textAmis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:paddingLeft="15dip"
        android:text="@string/listeAmis"
        />

    <ImageView
        android:src="@android:drawable/divider_horizontal_textfield"
        android:id="@+id/separation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:paddingTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheveux"
        android:id="@+id/textView4" />

    <Spinner
        android:id="@+id/cheveux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        >
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yeux"
        android:id="@+id/textView5" />

    <Spinner
        android:id="@+id/yeux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orientation"
        android:id="@+id/textView6" />

    <Spinner
        android:id="@+id/sexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Spinner>
    <ListView
        android:id="@+id/listAmis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice" >
    </ListView>
</LinearLayout>
