<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Preference"
            android:id="@+id/Preferencep"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentLeft="true"
            android:textSize="30dp"
            android:textColor="@color/blanc" />
        <TextView
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:textSize="20sp"
            android:text="@string/Genre"
            android:id="@+id/nom12"
            android:layout_below="@id/Preferencep"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/spinnergenre1" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnergenre1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/Preferencep"
            android:layout_alignLeft="@+id/button17"
            android:layout_alignStart="@+id/button17" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnergenre2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/spinnergenre1"
            android:layout_alignLeft="@+id/spinnergenre1"
            android:layout_alignStart="@+id/spinnergenre1" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:text="@string/Cheveux"
            android:id="@+id/nom14"
            android:textSize="20dp"
            android:layout_alignTop="@+id/spinnercheveux"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnercheveux"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/spinnergenre2"
            android:layout_alignLeft="@+id/spinnergenre1"
            android:layout_alignStart="@+id/spinnergenre1" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnercheveux2"
            android:layout_below="@id/spinnercheveux"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/spinnergenre1"
            android:layout_alignStart="@+id/spinnergenre1" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:text="@string/yeux"
            android:id="@+id/nom15"
            android:textSize="20dp"
            android:layout_alignTop="@+id/button20"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button15"
            android:layout_below="@id/spinnercheveux2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/spinnergenre1"
            android:layout_alignStart="@+id/spinnergenre1" />
        <TextView
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:text="@string/Peau"
            android:id="@+id/nom16"
            android:textSize="20dp"
            android:layout_below="@+id/spinnercheveux2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/button16"
            android:layout_below="@+id/button18"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:text="@string/Etude"
            android:id="@+id/nom17"
            android:textSize="20dp"
            android:layout_below="@+id/button17"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/button17"
            android:layout_below="@+id/button15"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/button18"
            android:layout_below="@+id/button17"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/button19"
            android:layout_below="@id/button18"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/button20"
            android:layout_below="@id/button19"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/button21"
            android:layout_below="@id/button20"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <!--<Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            android:layout_alignTop="@+id/nom12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" /> -->
    </RelativeLayout>
</ScrollView>