<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dip"
    android:paddingRight="20dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="11dp"
        android:text="Population"
        android:layout_centerHorizontal="true"
        android:id="@+id/titrepop"
        />
    <TextView
        android:id="@+id/nompop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/titrepop" />
    <Button
        android:id="@+id/ajout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajoutamis"
        android:paddingTop="20dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/titrepop" />
    <ImageView
        android:id="@+id/photo_profil"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/ajout"
        android:src="@mipmap/profil"/>
    <TextView
        android:id="@+id/genrepop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:layout_below="@+id/photo_profil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/cheveuxpop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/genrepop"
        android:paddingTop="15dip"
        />
    <TextView
        android:id="@+id/localisationpop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dip"
        android:layout_below="@id/cheveuxpop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/agepop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:layout_below="@+id/photo_profil"
        android:layout_alignRight="@+id/yeuxpop"
        android:layout_alignEnd="@+id/yeuxpop" />
    <TextView
        android:id="@+id/yeuxpop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/agepop"
        android:paddingTop="15dip"
        />
    <TextView

        android:id="@+id/sexprefpop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/yeuxpop"
        android:paddingTop="15dip"
        />
    <Button
        android:id="@+id/suivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suivant"
        android:layout_below="@+id/sexprefpop"
        android:layout_alignRight="@+id/sexprefpop"
        android:layout_alignEnd="@+id/sexprefpop" />
    <Button
        android:id="@+id/precedent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precedent"
        android:layout_below="@+id/localisationpop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>